reworking button layout

--- a/index.html
+++ b/index.html
@@ -90,8 +90,10 @@
           <h2>Control</h2>
           <p>Panel</p>
           <button-container>
-            <button class="activator-buttons" id="input-vocab">&#43;</button>
-            <button class="activator-buttons" id="remove-one">&#8722;</button>
+            <add-and-remove>
+              <button class="activator-btn" id="input-vocab">&#43;</button>
+              <button class="activator-btn" id="remove-one">&#8722;</button>
+            </add-and-remove>
             <button class="activator-buttons" id="remove-all">&#128465;</button>
             <button class="activator-buttons shuffle-words" id="shuffle-words">
               <i class="fas fa-random" aria-hidden="true"></i>
